--- a/app/src/main/res/drawable/custom_input.xml
+++ b/app/src/main/res/drawable/custom_input.xml
@@ -4,7 +4,7 @@
     <item android:state_enabled="true" android:state_focused="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/white"/>
-            <stroke android:width="1dp" android:color="@color/pink_500"/>
+            <stroke android:width="1dp" android:color="@color/green"/>
             <corners android:radius="5dp"/>
         </shape>
     </item>
@@ -12,7 +12,7 @@
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/white"/>
-            <stroke android:width="1dp" android:color="@color/pink_700"/>
+            <stroke android:width="1dp" android:color="@color/green"/>
             <corners android:radius="5dp"/>
         </shape>
     </item>
