--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -82,7 +82,7 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginBottom="4dp"
-        android:background="@color/pink_500"
+        android:background="@color/green"
         app:layout_constraintBottom_toTopOf="@+id/txt_total_text"
         app:layout_constraintEnd_toEndOf="@id/txt_delivery_charge"
         app:layout_constraintHorizontal_bias="0.0"
