--- a/app/src/main/res/layout/rv_home_variety.xml
+++ b/app/src/main/res/layout/rv_home_variety.xml
@@ -11,7 +11,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black"
         android:padding="8dp">
 
         <ImageView
@@ -36,7 +35,7 @@
             android:ems="15"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toStartOf="@+id/img_add_wishlist"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/img_product"
@@ -52,8 +51,7 @@
             android:ellipsize="end"
             android:ems="15"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/img_add_wishlist"
             app:layout_constraintHorizontal_bias="0.0"
