--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -35,7 +35,7 @@
     </style>
     
     <style name="CustomChipStyle" parent="Widget.MaterialComponents.Chip.Action">
-        <item name="chipBackgroundColor">@color/pink_500</item>
+        <item name="chipBackgroundColor">@color/green</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:checkable">true</item>
     </style>
