--- a/app/src/main/res/layout/rv_home_variety.xml
+++ b/app/src/main/res/layout/rv_home_variety.xml
@@ -17,11 +17,10 @@
             android:id="@+id/img_product"
             android:layout_width="0dp"
             android:layout_height="250dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginEnd="4dp"
+            app:layout_constraintEnd_toStartOf="@+id/img_delete_product"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/baseline_snowshoeing" />
 
         <TextView
@@ -62,10 +61,10 @@
             android:id="@+id/img_add_wishlist"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/txt_product_price"
+            android:layout_marginStart="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/txt_product_name"
+            app:layout_constraintStart_toEndOf="@+id/img_product"
             app:srcCompat="@drawable/baseline_favorite"
             app:tint="@color/pink_500" />
 
@@ -73,12 +72,9 @@
             android:id="@+id/img_delete_product"
             android:layout_width="28dp"
             android:layout_height="28dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="4dp"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="@+id/img_product"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/img_product"
-            app:srcCompat="@drawable/baseline_delete" />
+            app:srcCompat="@drawable/baseline_off" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
