--- a/app/src/main/res/layout/rv_home_shoe.xml
+++ b/app/src/main/res/layout/rv_home_shoe.xml
@@ -15,8 +15,9 @@
 
         <ImageView
             android:id="@+id/img_product"
-            android:layout_width="135dp"
+            android:layout_width="0dp"
             android:layout_height="120dp"
+            android:layout_marginEnd="26dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
